test/sema/builtin-type-no-auto-reference.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

func foo(ref_i: int&) { }

func main() {
    let i = 42;
    // CHECK: [[@LINE+1]]:9: error: cannot implicitly pass value types by reference, add explicit '&'
    foo(i);
}
